src/objects/Planned_Meeting__c/Planned_Meeting__c.object-meta.xml
<CustomObject>
    <label>Planned Meeting</label>
    <nameField>
        <label>Planned Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planned Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>