src/objects/Planned_Meeting__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Account on the Contact Plan object</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planned Meetings</relationshipLabel>
    <relationshipName>Planned_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>