src/objects/Planned_Meeting__c/fields/AccountSBU__c.field-meta.xml
<CustomField>
    <fullName>AccountSBU__c</fullName>
    <formula>Text( Account_Name__r.Strategic_Business_Unit__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountSBU</label>
    <type>Text</type>
</CustomField>