src/objects/Planned_Meeting__c/fields/Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Type</label>
    <referenceTo>Platform__c</referenceTo>
    <relationshipLabel>Planned Meetings</relationshipLabel>
    <relationshipName>Planned_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>