src/objects/Planned_Meeting__c/fields/Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Name__c</fullName>
    <description>This field stores the names of all related attachments</description>
    <label>Attachment Name</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>