src/objects/Planned_Meeting__c/fields/CBT_Directorate__c.field-meta.xml
<CustomField>
    <fullName>CBT_Directorate__c</fullName>
    <label>CBT Directorate</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CBT_Team__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Materials &amp; Devices</fullName>
            </value>
            <value>
                <fullName>Advanced Programs</fullName>
            </value>
            <value>
                <fullName>Advanced Sensing Technology</fullName>
            </value>
            <value>
                <fullName>Advanced Systems &amp; Prototyping</fullName>
            </value>
            <value>
                <fullName>Air Management</fullName>
            </value>
            <value>
                <fullName>ATM System Arch &amp; Modeling</fullName>
            </value>
            <value>
                <fullName>Autonomous Guidance</fullName>
            </value>
            <value>
                <fullName>Biometrics</fullName>
            </value>
            <value>
                <fullName>Center for Catalysis &amp; Separations</fullName>
            </value>
            <value>
                <fullName>Communication, Navigation &amp; Surveillance</fullName>
            </value>
            <value>
                <fullName>Component Validation</fullName>
            </value>
            <value>
                <fullName>COS</fullName>
            </value>
            <value>
                <fullName>Crew Interface &amp; Platform Systems</fullName>
            </value>
            <value>
                <fullName>Cyber Security</fullName>
            </value>
            <value>
                <fullName>Decision Technologies</fullName>
            </value>
            <value>
                <fullName>Design &amp; Development Engineering</fullName>
            </value>
            <value>
                <fullName>Displays &amp; Graphics</fullName>
            </value>
            <value>
                <fullName>Electric Power</fullName>
            </value>
            <value>
                <fullName>Engine Component Tech.</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>GLSS</fullName>
            </value>
            <value>
                <fullName>Healthcare Logistics</fullName>
            </value>
            <value>
                <fullName>Health IT</fullName>
            </value>
            <value>
                <fullName>High Integrity Controls</fullName>
            </value>
            <value>
                <fullName>HTSI - Other</fullName>
            </value>
            <value>
                <fullName>Human Centered Systems</fullName>
            </value>
            <value>
                <fullName>Integrated Technology Solutions</fullName>
            </value>
            <value>
                <fullName>Intelligence</fullName>
            </value>
            <value>
                <fullName>LISC</fullName>
            </value>
            <value>
                <fullName>Logistics Other Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>