src/objects/Planned_Meeting__c/fields/Contact_Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Plan_Number__c</fullName>
    <description>This is the auto sequence number for the Contact Plan record type</description>
    <displayFormat>FCP-{0}</displayFormat>
    <externalId>true</externalId>
    <label>Contact Plan Number</label>
    <type>AutoNumber</type>
</CustomField>