src/objects/Planned_Meeting__c/fields/Duration_Formula__c.field-meta.xml
<CustomField>
    <fullName>Duration_Formula__c</fullName>
    <description>Duration needs to be a formula field, the duration number field should be deleted from the page layout.</description>
    <formula>TEXT(ROUND((End__c - Start__c) * 24, 2))+&apos; Hours&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>