src/objects/Planned_Meeting__c/fields/Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Enterprise__c</fullName>
    <formula>Supported_Products__r.Enterprise__c</formula>
    <label>Enterprise</label>
    <type>Text</type>
</CustomField>