src/objects/Planned_Meeting__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the proper Event if this meeting will happen at an Air/Trade Show Event.</inlineHelpText>
    <label>Event</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Event__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Planned Meetings</relationshipLabel>
    <relationshipName>Planned_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>