src/objects/Planned_Meeting__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback</label>
    <referenceTo>Feedback__c</referenceTo>
    <relationshipLabel>Planned Meetings</relationshipLabel>
    <relationshipName>Planned_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>