src/objects/Planned_Meeting__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>