src/objects/Planned_Meeting__c/fields/OEM_Location__c.field-meta.xml
<CustomField>
    <fullName>OEM_Location__c</fullName>
    <label>OEM Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agusta</fullName>
            </value>
            <value>
                <fullName>Bombardier - Mirabel</fullName>
            </value>
            <value>
                <fullName>Bombardier - Montreal</fullName>
            </value>
            <value>
                <fullName>Cessna/Beechcraft/LearJet</fullName>
            </value>
            <value>
                <fullName>Dassault Aviation</fullName>
            </value>
            <value>
                <fullName>Dassault Falcon Jet - Little Rock</fullName>
            </value>
            <value>
                <fullName>Flex Jet</fullName>
            </value>
            <value>
                <fullName>Gulfstream Aerospace Corporation</fullName>
            </value>
            <value>
                <fullName>Israel Aerospace Industries (IAI)</fullName>
            </value>
            <value>
                <fullName>Net Jets</fullName>
            </value>
            <value>
                <fullName>Pilatus - Broomfield</fullName>
            </value>
            <value>
                <fullName>Pilatus - Stans</fullName>
            </value>
            <value>
                <fullName>Pratt &amp; Whitney Canada</fullName>
            </value>
            <value>
                <fullName>Viking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>