src/objects/Planned_Meeting__c/fields/Open_Past_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Past_Due_Date__c</fullName>
    <formula>IF(
AND( Expected_Date__c &lt;  TODAY() ,
            NOT(ISPICKVAL(  Meeting_Status__c , &apos;Done&apos;) ||  ISPICKVAL( Meeting_Status__c , &apos;Cancelled&apos;))
),1,0)</formula>
    <label>Open Past Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>