src/objects/Planned_Meeting__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Planned Meetings</relationshipLabel>
    <relationshipName>Planned_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>