src/objects/Planned_Meeting__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Opportunity Number</description>
    <label>Opportunity Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>