src/objects/Planned_Meeting__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOMBARDIER</fullName>
            </value>
            <value>
                <fullName>DASSAULT</fullName>
            </value>
            <value>
                <fullName>PILATUS</fullName>
            </value>
            <value>
                <fullName>GULFSTREAM</fullName>
            </value>
            <value>
                <fullName>TEXTRON</fullName>
            </value>
            <value>
                <fullName>EMBRAER</fullName>
            </value>
            <value>
                <fullName>HELO</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>