src/objects/Planned_Meeting__c/fields/SBU_Formulae__c.field-meta.xml
<CustomField>
    <fullName>SBU_Formulae__c</fullName>
    <description>For coding purpose. Needed for SBU to auto populate from CreatedBy User&apos;s SBU.</description>
    <formula>TEXT( CreatedBy.SBU_User__c )</formula>
    <label>SBU Formulae</label>
    <type>Text</type>
</CustomField>