src/objects/Planned_Meeting__c/fields/SC1__c.field-meta.xml
<CustomField>
    <fullName>SC1__c</fullName>
    <label>Sub-Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CBT_Team__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACST</fullName>
            </value>
            <value>
                <fullName>Adv Tech</fullName>
            </value>
            <value>
                <fullName>Aero Level Other</fullName>
            </value>
            <value>
                <fullName>Airbus</fullName>
            </value>
            <value>
                <fullName>Airlines Americas</fullName>
            </value>
            <value>
                <fullName>Americas AM Other</fullName>
            </value>
            <value>
                <fullName>APAC Airlines</fullName>
            </value>
            <value>
                <fullName>APAC AM Other</fullName>
            </value>
            <value>
                <fullName>APAC - BGA Aftermarket</fullName>
            </value>
            <value>
                <fullName>APAC OEM</fullName>
            </value>
            <value>
                <fullName>BendixKing CBT</fullName>
            </value>
            <value>
                <fullName>BGA AM Americas</fullName>
            </value>
            <value>
                <fullName>Boeing ATR</fullName>
            </value>
            <value>
                <fullName>Bombardier ATR</fullName>
            </value>
            <value>
                <fullName>Bombardier BGA</fullName>
            </value>
            <value>
                <fullName>D&amp;S EMEA OEM</fullName>
            </value>
            <value>
                <fullName>D&amp;S OTHER</fullName>
            </value>
            <value>
                <fullName>DAA Americas</fullName>
            </value>
            <value>
                <fullName>DAP Aftermarket</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>Divest</fullName>
            </value>
            <value>
                <fullName>DOEM</fullName>
            </value>
            <value>
                <fullName>DSE EMEA</fullName>
            </value>
            <value>
                <fullName>DSPC</fullName>
            </value>
            <value>
                <fullName>E&amp;PS OE Other</fullName>
            </value>
            <value>
                <fullName>Embraer ATR</fullName>
            </value>
            <value>
                <fullName>Embraer BGA</fullName>
            </value>
            <value>
                <fullName>EMEA Airlines</fullName>
            </value>
            <value>
                <fullName>EMEA - BGA Aftermarket</fullName>
            </value>
            <value>
                <fullName>EMEAI AM Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>