src/objects/Planned_Meeting__c/fields/SC2__c.field-meta.xml
<CustomField>
    <fullName>SC2__c</fullName>
    <label>Sub-Channel 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>