src/objects/Planned_Meeting__c/fields/Send_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>NOTE: Meeting attendees will receive notification emails every time Meeting Details/Status change</inlineHelpText>
    <label>Send Email Notification</label>
    <type>Checkbox</type>
</CustomField>