src/objects/Planned_Meeting__c/fields/TCM_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>TCM_Survey_Link__c</fullName>
    <description>Tech connect survey url</description>
    <label>TCM Survey Link</label>
    <type>Url</type>
</CustomField>