src/objects/Planned_Meeting__c/recordTypes/Contact_Plan.recordType-meta.xml
<RecordType>
    <fullName>Contact_Plan</fullName>
    <active>true</active>
    <description>This new record type will mimic the existing Contact Plan object</description>
    <label>Contact Plan</label>
</RecordType>