src/objects/Planned_Meeting__c/recordTypes/Customer_Training.recordType-meta.xml
<RecordType>
    <fullName>Customer_Training</fullName>
    <active>true</active>
    <description>To be used to track channel partner and operator training requests and sessions</description>
    <label>Customer Training</label>
</RecordType>