src/objects/Planned_Meeting__c/recordTypes/CX_Lab.recordType-meta.xml
<RecordType>
    <fullName>CX_Lab</fullName>
    <active>true</active>
    <description>To record Customer Experience (CX) Lab Events</description>
    <label>CX Lab</label>
</RecordType>