src/objects/Planned_Meeting__c/recordTypes/Deployment.recordType-meta.xml
<RecordType>
    <fullName>Deployment</fullName>
    <active>true</active>
    <description>New Record type created for deployment Planned Meetings</description>
    <label>Deployment</label>
</RecordType>