src/objects/Planned_Meeting__c/recordTypes/Intervention.recordType-meta.xml
<RecordType>
    <fullName>Intervention</fullName>
    <active>true</active>
    <description>Intervention Planned Meeting Type</description>
    <label>Intervention</label>
</RecordType>