src/objects/Planned_Meeting__c/recordTypes/Invitation.recordType-meta.xml
<RecordType>
    <fullName>Invitation</fullName>
    <active>true</active>
    <description>This meeting type is used for Event Invitation type meetings. An example is the Invitation Only Brunch at the Paris Air Show.</description>
    <label>Invitation</label>
</RecordType>