src/objects/Planned_Meeting__c/recordTypes/Meeting.recordType-meta.xml
<RecordType>
    <fullName>Meeting</fullName>
    <active>true</active>
    <description>This is a meeting for an Air/Trade Show or other Event.</description>
    <label>Meeting</label>
</RecordType>