src/objects/Planned_Meeting__c/recordTypes/Planned_Meeting_Type.recordType-meta.xml
<RecordType>
    <fullName>Planned_Meeting_Type</fullName>
    <active>true</active>
    <description>This type of meeting is designed to handle the reoccurring weekly meetings for Opportunity / Campaign Phase review.</description>
    <label>Opportunity Review</label>
</RecordType>