src/objects/Planned_Meeting__c/recordTypes/VOC_Strategic_Event.recordType-meta.xml
<RecordType>
    <fullName>VOC_Strategic_Event</fullName>
    <active>true</active>
    <description>This is new record type for Voice of Customer Strategic Event</description>
    <label>VOC Strategic Event</label>
</RecordType>